err/tingyun.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tingyun'...
Listing './lib/python3.5/site-packages/tingyun/armoury'...
Listing './lib/python3.5/site-packages/tingyun/armoury/ammunition'...
Listing './lib/python3.5/site-packages/tingyun/armoury/ammunition/tornado'...
Listing './lib/python3.5/site-packages/tingyun/armoury/ammunition/tornado_4'...
Compiling './lib/python3.5/site-packages/tingyun/armoury/ammunition/tornado_4/gen.py'...
***   File "./lib/python3.5/site-packages/tingyun/armoury/ammunition/tornado_4/gen.py", line 18
    except Exception, _:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tingyun/armoury/ammunition/tornado_4/wsgi_mode'...
Listing './lib/python3.5/site-packages/tingyun/armoury/ammunition/tornado_tracker'...
Listing './lib/python3.5/site-packages/tingyun/armoury/matrix'...
Listing './lib/python3.5/site-packages/tingyun/armoury/mq'...
Listing './lib/python3.5/site-packages/tingyun/armoury/nova'...
Listing './lib/python3.5/site-packages/tingyun/armoury/sampler'...
Compiling './lib/python3.5/site-packages/tingyun/armoury/sampler/environment.py'...
***   File "./lib/python3.5/site-packages/tingyun/armoury/sampler/environment.py", line 97
    print "self test: %s" % env_config()
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tingyun/armoury/trigger'...
Listing './lib/python3.5/site-packages/tingyun/armoury/webob'...
Listing './lib/python3.5/site-packages/tingyun/battlefield'...
Listing './lib/python3.5/site-packages/tingyun/commander'...
Listing './lib/python3.5/site-packages/tingyun/commander/commands'...
Listing './lib/python3.5/site-packages/tingyun/config'...
Listing './lib/python3.5/site-packages/tingyun/embattle'...
Listing './lib/python3.5/site-packages/tingyun/flashpoint'...
Listing './lib/python3.5/site-packages/tingyun/logistics'...
Listing './lib/python3.5/site-packages/tingyun/logistics/transportation'...
Listing './lib/python3.5/site-packages/tingyun/logistics/warehouse'...
Listing './lib/python3.5/site-packages/tingyun/logistics/workshop'...
Listing './lib/python3.5/site-packages/tingyun/packages'...
Listing './lib/python3.5/site-packages/tingyun/packages/requests'...
Listing './lib/python3.5/site-packages/tingyun/packages/requests/packages'...
Listing './lib/python3.5/site-packages/tingyun/packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/tingyun/packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/tingyun/packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/tingyun/packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/tingyun/packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/tingyun/packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/tingyun/packages/wrapt'...
Listing './lib/python3.5/site-packages/tingyun-1.3.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
